import utils.js

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
     </div>
 
     <!-- utils -->
+    <script src="js/utils.js"></script>
     <script src="js/darkmode.js"></script>
     <script src="js/generative.js"></script>
 
