feat: convert js to modules

--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
     </div>
 
     <!-- utils -->
-    <script src="js/utils.js"></script>
+    <script type="module" src="js/utils.js"></script>
     <script src="js/darkmode.js"></script>
     <script src="js/generative.js"></script>
 
-    <script src="js/script.js"></script>
-    <script src="js/database.js"></script>
+    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/database.js"></script>
   </body>
 </html>
