refactor script.js

--- a/index.html
+++ b/index.html
@@ -267,11 +267,15 @@
     </div>
 
     <!-- utils -->
-    <script type="module" src="js/utils.js"></script>
-    <script src="js/darkmode.js"></script>
-    <script src="js/generative.js"></script>
-
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/common.js"></script>
+    <script type="module" src="js/connections.js"></script>
+    <script type="module" src="js/darkmode.js"></script>
     <script type="module" src="js/database.js"></script>
+    <script type="module" src="js/details.js"></script>
+    <script type="module" src="js/generative.js"></script>
+    <script type="module" src="js/input.js"></script>
+    <script type="module" src="js/player.js"></script>
+    <script type="module" src="js/playlist.js"></script>
+    <script type="module" src="js/utils.js"></script>
   </body>
 </html>
