added progress bar initial

--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
             </div>
           </div>
 
+          <div id="player-progress-container">
+            <div id="player-progress-element"></div>
+          </div>
+
           <div id="player-contents-container"></div>
         </div>
       </main>
@@ -266,7 +270,7 @@
       </div>
     </div>
 
-    <!-- utils -->
+    <!-- js -->
     <script type="module" src="js/common.js"></script>
     <script type="module" src="js/connections.js"></script>
     <script type="module" src="js/darkmode.js"></script>
