--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
 
           <div id="player-contents-container"></div>
         </div>
+
+        <div id="manual-mode-button">manual</div>
       </main>
 
       <div id="details-container"></div>
