--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/colors.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/neomorphism.css" />
     <link rel="stylesheet" href="css/media-queries.css" />
 
     <!-- Third party libraries -->
