--- a/index.html
+++ b/index.html
@@ -233,11 +233,7 @@
 
           <div id="player-progress-container">
             <div id="player-progress-element">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 10 10"
-                style="width: 16px; height: 16px"
-              >
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10">
                 <!-- <circle cx="5" cy="5" r="4.8" stroke="white" stroke-width="0.3px" /> -->
                 <circle cx="5" cy="5" r="5" />
               </svg>
